AC_INIT([dmtcp],[0.99])
AC_PROG_MAKE_SET
AC_PROG_LN_S
AC_PROG_MKDIR_P
AC_PROG_CC
AC_PROG_CXX
AC_CONFIG_FILES([Makefile test/Makefile]) 
AC_CONFIG_SUBDIRS([dmtcp])
AC_ARG_ENABLE([debug],
            [AS_HELP_STRING([--enable-debug],
                            [enable (very) verbose debug printouts
                             and write log files to /tmp (default is
                             disabled)])],
            [use_jassert=$enableval],
            [use_jassert=no])
AC_ARG_ENABLE([timing],
            [AS_HELP_STRING([--enable-timing],
                            [record checkpoint/restart timing information
                            to jtimings.csv, in working directory of
                            dmtcp_coordinator, and to stderr.])],
            [use_jtiming=$enableval],
            [use_jtiming=no])

compileReadlineC=yes
AC_CHECK_LIB([readline],[readline],   [],[compileReadlineC=no])
AC_CHECK_LIB([history], [add_history],[],[compileReadlineC=no])

if test "$compileReadlineC" = "yes"; then
  AC_SUBST([HAS_READLINE],[yes])
else
  AC_SUBST([HAS_READLINE],[no])
fi

AC_OUTPUT
